# api-framework

./: Cargo.toml
src/: env.rs  lib.rs  shutdown.rs
src/framework/: mod.rs  queued_async.rs  state.rs
src/middleware/: auth.rs  mod.rs
src/transactions/: download_and_extract_archive.rs  download_artifact.rs  download_artifact_and_extract.rs  extract_archive.rs  fetch_artifact.rs  fetch_artifacts.rs  mod.rs
src/workflow/: artifact.rs  mod.rs
